# kilroyfaces

./: .gitattributes  .gitignore  404.html  README.md  environment.yml  index.html  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: docs.yml  draft.yml  pypi.yml  test-multiplatform.yml  test.yml
kilroyfaces/: README.md  pyproject.toml
kilroyfaces/docs/: mkdocs.yml
kilroyfaces/docs/docs/: index.md
kilroyfaces/docs/docs/usage/: library.md
kilroyfaces/src/kilroyfaces/: __init__.py
kilroyfaces/src/kilroyfaces/discord/: face.py  scoring.py  scraping.py
kilroyfaces/src/kilroyfaces/twitter/: auth.py  face.py  scoring.py  scraping.py  utils.py
notebooks/: example.ipynb
search/: search_index.json
