# this file is needed to install the package from git without support for subdirectories
# see: https://github.com/python-poetry/poetry/issues/755

[tool.poetry]
name = "kilroyfaces"
version = "0.2.1"
description = "kilroy integrations 🤝"
readme = "kilroyfaces/README.md"
authors = ["kilroy <kilroymail@pm.me>"]
classifiers = ["License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"]
repository = "https://github.com/kilroybot/kilroyfaces"
documentation = "https://kilroybot.github.io/kilroyfaces"
packages = [{ include = "kilroyfaces", from = "kilroyfaces/src" }]

[tool.poetry.dependencies]
python = "^3.9"
kilroyshare = "~0.8.0"
tweepy = "^4.8"
"discord.py" = "^1.7"

# dev
jupyterlab = { version = "^3.2", optional = true }

# test
pytest = { version = "^7.0", optional = true }

[tool.poetry.extras]
# need to do it that way until poetry supports dependency groups: https://github.com/python-poetry/poetry/issues/1644
dev = ["jupyterlab", "pytest"]
test = ["pytest"]

[build-system]
# this should be there, see https://python-poetry.org/docs/pyproject/#poetry-and-pep-517
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
